# SnapMark

./: .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
TestData/: search_index.db
TestData/2025/08/04/: screen_18-24-26.md
config/: mcp_use_config.json
design_document/: UI.md
snapmark/: __init__.py  background.py  config.py  main.py
snapmark/core/: ai_chat.py  ai_summary.py  hotkey.py  markdown_generator.py  mcp_agent_wrapper.py  mcp_client.py  mcp_requirements.py  ocr.py  screenshot.py  vlm.py
snapmark/gui/: enhanced_window.py  main_window.py  streamlit_app.py
snapmark/utils/: scheduler.py  search.py  vlm_config.py
tests/: test_mcp_excel_integration.py  test_mcp_with_providers.py  test_vlm_providers.py  test_vlm_switching.py
tests/test_data/: screen_13-32-20.md
