[project]
name = "snapmark"
version = "0.1.0"
description = "Desktop screenshot tool with OCR and Markdown generation"
authors = [{name = "User", email = "user@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.5.0",
    "mss>=9.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "pynput>=1.7.6",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.4.0",
    "schedule>=1.2.0",
    "markdown>=3.5.0",
    "requests>=2.31.0",
    "mcp>=1.0.0",
    "pytest-asyncio>=1.1.0",
    "openpyxl>=3.1.5",
    "mcp-use>=1.3.8",
    "langchain-openai>=0.3.28",
    "streamlit>=1.47.1",
    "langchain-ollama>=0.3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
snapmark = "snapmark.main:main"
snapmark-bg = "snapmark.background:run_background_service"

[tool.hatch.build.targets.wheel]
packages = ["snapmark"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
